--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-merge-dev.sh
-
 # Rinrin
 .vscode/
+merge-dev.sh
+
+# by SvelteKit
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
