⏪ Revert: ignoreDeprecations of tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true,
-		"ignoreDeprecations": "5.0" // Temporarily silence warnings
+		"strict": true
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
