--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-i18n": "^4.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"sass": "^1.57.1",
-		"svelte-i18n": "^3.7.0"
+		"sass": "^1.57.1"
 	}
 }
