--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,15 @@
 		"strict": true,
 		"moduleResolution": "bundler"
 	},
-	"include": ["src/**/*.ts", "src/**/*.svelte", "assets/scripts/**/*.ts"]
+	"include": [
+		"src/**/*.svelte",
+		"src/**/*.ts",
+		"assets/scripts/**/*.ts",
+		"assets/scripts/**/*.js",
+		"static/scripts/**/*.js",
+		"*.js",
+		"*.cjs"
+	]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
