--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lnt": "prettier --check . && eslint .",
 		"fmt": "prettier --write .",
-		"article": "node assets/scripts/create-article.js",
+		"article": "tsx assets/scripts/create-article.ts",
 		"validate-socials": "tsx assets/scripts/validate-socials.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/node": "^22.7.4",
 		"@types/nprogress": "^0.2.3",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
