--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
 		"src/**/*.ts",
 		"assets/scripts/**/*.ts",
 		"assets/scripts/**/*.js",
-		"static/scripts/**/*.js",
-		"*.js",
-		"*.cjs"
+		"static/scripts/**/*.js"
 	]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
