--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@typescript-eslint/parser": "^6.0.0",
 		"axios": "^1.7.7",
 		"cheerio": "^1.0.0",
+		"embla-carousel-autoplay": "^8.3.0",
+		"embla-carousel-svelte": "^8.3.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
