🔥 Remove: social validator
due to potential violation of terms of service of each social media platform.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lnt": "prettier --check . && eslint .",
 		"fmt": "prettier --write .",
-		"article": "tsx assets/scripts/create-article.ts",
-		"validate-socials": "tsx assets/scripts/validate-socials.ts"
+		"article": "tsx assets/scripts/create-article.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^3.0.0",
@@ -21,8 +20,6 @@
 		"@types/nprogress": "^0.2.3",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
-		"axios": "^1.7.7",
-		"cheerio": "^1.0.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
