--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "npm run licenses && vite build",
 		"preview": "vite preview",
+		"licenses": "license-checker --production --excludePrivatePackages --onlyAllow \"MIT;ISC;Apache-2.0;BSD-3-Clause;(MIT OR Apache-2.0);CC0-1.0;0BSD\" --customPath assets/license-checker-custom-format.json --json --out src/lib/licenses.json",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lnt": "prettier --check . && eslint .",
@@ -18,6 +19,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"license-checker": "^25.0.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte-check": "^3.6.0"
